fix: header is not transparent on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -553,6 +553,14 @@ video {
   z-index: 10 !important;
 }
 
+.z-30 {
+  z-index: 30 !important;
+}
+
+.z-50 {
+  z-index: 50 !important;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2 !important;
 }
